/*
 * $Id: ChangeLog,v 1.6261 2008/11/19 15:08:31 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-11-20 16:10 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source\vm\fm.c
    - removed some debug windows info. That I only needs with test purposes.

2008-11-19 13:00 UTC-0300 Luiz Rafael Culik Guimaraes <luiz at xharbour.com.br>
   * contrib/hbzlib/include/*.h
   * contrib/hbzlib/zipexception.cpp
     contrib/hbzlib/zipautobuffer.cpp
     contrib/hbzlib/ziparchive.cpp
     ! change to compile with borland c++ 6.10

2008-11-19 12:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/pp/ppcore.c
    ! initialize PHB_PP_TOKEN pToken (line 429) before used (gcc warning)

  * source/rtl/gtwin/gtwin.c
    + define MOUSE_WHEELED if not defined (for: __DMC__)

  * source/rtl/gtalleg/gtalleg.c
  * source/rtl/gtcgi/gtcgi.c
  * source/rtl/gtcrs/gtcrs.c
  * source/rtl/gtdos/gtdos.c
  * source/rtl/gtgui/gtgui.c
  * source/rtl/gtgui/gtdef.c
  * source/rtl/gtos2/gtos2.c
  * source/rtl/gtpca/gtpca.c
  * source/rtl/gtsln/gtsln.c
  * source/rtl/gtstd/gtstd.c
  * source/rtl/gttrm/gttrm.c
  * source/rtl/gtwin/gtwin.c
  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtxwc/gtxwc.c
  * source/rtl/gt_tpl/gt_tpl.c
  * source/rtl/version.c
  * source/pp/pplib3.c
  * source/vm/cmdarg.c
  * source/ct/ctwin.c
  * contrib/gtwvg/gtwvg.c
  * contrib/gtwvw/gtwvw.c
  * contrib/hbzlib/zip.c
  * contrib/libnf/fttext.c
  * source/lang/msgbgmik.c
  * source/lang/msgbgwin.c
  * source/lang/msgby866.c
  * source/lang/msgbywin.c
  * source/lang/msgcs852.c
  * source/lang/msgcsiso.c
  * source/lang/msgcskam.c
  * source/lang/msgcswin.c
  * source/lang/msgde.c
  * source/lang/msgdewin.c
  * source/lang/msgen.c
  * source/lang/msgeo.c
  * source/lang/msgeu.c
  * source/lang/msgfr.c
  * source/lang/msggl.c